changed the height of the floating column/vertical boxes from a fixed value to and auto adjustment, this improves readability when viewing the site on a mobile device and generally makes the page more responsive.

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ ol{
   }
 .columnbox1{
   width: 280px;
-  height: 400px;
+  height: auto;
   float:left;
   box-sizing: border-box;
   border: 3px solid black; 
@@ -61,7 +61,7 @@ ol{
   }
 .columnbox2{
   width: 280px;
-  height: 400px;
+  height: auto;
   float:left;
   border: 3px solid black; 
   border-radius: 10px;
@@ -95,7 +95,7 @@ ul li {
   .columnbox2{
     clear: both;
     width: 280px;
-    height: 400px;
+    height: auto;
     border: 3px solid black; 
     border-radius: 10px;
     margin-bottom: 25px; 
@@ -111,7 +111,7 @@ ul li {
   .columnbox1{
     clear: both;
     width: 280px;
-    height: 400px;
+    height: auto;
     border: 3px solid black; 
     border-radius: 10px;
     margin-bottom: 25px; 
@@ -121,7 +121,7 @@ ul li {
   .columnbox2{
     clear: both;
     width: 280px;
-    height: 400px;
+    height: auto;
     border: 3px solid black; 
     border-radius: 10px;
     margin-bottom: 25px; 
